flux/infrastructure/sealed-secrets/sealed-secrets-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sealed-secrets
  labels:
    network-zone: infrastructure
